# rusted-firmware-a

./: .gitreview  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  bl31.ld  bl31_entrypoint.S  build-and-run.sh  build.rs  cpu_data.S  cpu_helpers.S  enable_mmu.S  platforms.rs  rust-toolchain.toml
arm-gpt/: Cargo.toml
arm-gpt/src/: aarch64.rs  lib.rs  table.rs
arm-sysregs/: Cargo.toml
arm-sysregs/src/: aarch64.rs  fake.rs  lib.rs  macros.rs  manual.rs
doc/: getting-started.md  style-guide.md  threat-model.md
docs/: CONTRIBUTING.md  architecture.md  getting-started.md  hw-sw-requirements.md  smc-services.md  style-guide.md  threat-model.md
docs/plat/arm/: arm-build-options.rst
fvp-rf-a-bl31/: Cargo.toml  build.rs
fvp-rf-a-bl31/src/: main.rs
include/arch/aarch64/: asm_macros.S  el3_common_macros.S
include/bl31/: ea_handle.h
include/common/: asm_macros_common.S  bl_common.h  ep_info.h  interrupt_props.h  runtime_svc.h
include/common/tbbr/: tbbr_img_def.h
include/drivers/: console.h
include/drivers/arm/: gic_common.h
include/export/common/: ep_info_exp.h
include/lib/: spinlock.h
include/lib/cpus/: cpu_ops.h  errata.h
include/lib/el3_runtime/: context_el2.h  cpu_data.h
include/lib/libc/: cdefs.h
include/lib/xlat_tables/: xlat_mmu_helpers.h  xlat_tables_defs.h
lib/aarch64/: cache_helpers.S  misc_helpers.S
make_helpers/: defaults.mk
qemu-rf-a-bl31/: Cargo.toml  build.rs
qemu-rf-a-bl31/src/: main.rs
rf-a-bl31-build/: Cargo.toml
rf-a-bl31-build/src/: lib.rs
rust/: Cargo.toml  Makefile  README.md  bl31.ld  bl31.mk  bl31_entrypoint.S  build.rs  context.S  crash_reporting.S  debug.S  fvp.ld  image.ld  pl011_console.S  platforms.rs  pre-push  qemu.ld  runtime_exceptions.S  rust-toolchain.toml
rust/.cargo/: config.toml
rust/doc/: style-guide.md  threat-model.md
rust/include/arch/aarch64/: arch.h  assert_macros.S  console_macros.S  smccc_helpers.h
rust/include/bl31/: ehf.h  interrupt_mgmt.h  sync_handle.h
rust/include/common/: bl_common.h  debug.h  param_header.h
rust/include/drivers/arm/: gicv2.h  gicv3.h  pl011.h  tzc400.h  tzc_common.h
rust/include/export/common/: bl_common_exp.h  param_header_exp.h
rust/include/export/lib/: utils_def_exp.h
rust/include/lib/: cassert.h  smccc.h  utils_def.h
rust/include/lib/cpus/: cpu_ops.h
rust/include/lib/cpus/aarch64/: cpu_macros.S
rust/include/lib/xlat_tables/: xlat_tables_v2.h  xlat_tables_v2_helpers.h
rust/include/plat/arm/board/common/: v2m_def.h
rust/include/plat/arm/common/: smccc_def.h
rust/include/plat/common/: common_def.h
rust/secure_test_framework/: Cargo.toml  README.md  build.rs  fvp_bl32.ld  fvp_bl33.ld  qemu_bl32.ld  qemu_bl33.ld
rust/secure_test_framework/src/: bl32.rs  bl33.rs  exceptions.rs  expect.rs  ffa.rs  framework.rs  gicv3.rs  logger.rs  normal_world_tests.rs  platform.rs  protocol.rs  secure_tests.rs  util.rs
rust/secure_test_framework/src/platform/: fvp.rs  qemu.rs
rust/src/: aarch64.rs  arm_macros.S  asm_macros_common.S  asm_macros_common_purge.S  cache_helpers.S  context.S  context.rs  debug.S  debug.rs  exceptions.rs  gicv3.rs  layout.rs  layout_fake.rs  logger.rs  main.rs  pagetable.rs  pl011.rs  platform.rs  platform_helpers.S  runtime_exceptions.S  semihosting.rs  services.rs  smccc.rs  stacks.rs  sysregs.rs
rust/src/platform/: fvp.rs  qemu.rs  test.rs
rust/src/platform/fvp/: crash_print_regs.S
rust/src/platform/qemu/: crash_print_regs.S
rust/src/services/: arch.rs  ffa.rs  psci.rs  rmmd.rs
rust/src/services/psci/: power_domain_tree.rs  spmd_stub.rs
rust/src/sysregs/: fake.rs
rust/supply-chain/: audits.toml  config.toml
rust/tools/: pre-push  size-history
secure_test_framework/: Cargo.toml  README.md  build.rs  fvp_bl32.ld  fvp_bl33.ld  fvp_stf_rmm.ld  qemu_bl32.ld  qemu_bl33.ld
secure_test_framework/src/: bl32.rs  bl33.rs  exceptions.rs  ffa.rs  framework.rs  gicv3.rs  heap.rs  logger.rs  normal_world_tests.rs  pagetable.rs  platform.rs  protocol.rs  rmi.rs  rmm.rs  secondary.rs  stf_rmm.rs  sysregs.rs  tests.rs  timer.rs  util.rs
secure_test_framework/src/framework/: expect.rs  protocol.rs
secure_test_framework/src/platform/: fvp.rs  qemu.rs
secure_test_framework/src/tests/: dit.rs  ffa_spmd.rs  interrupts.rs  normal_world.rs  psci.rs  psci_osi.rs  rmi.rs  rmi_fail.rs  sctlr2.rs  secure_world.rs  simd.rs  smccc_arch.rs  sve.rs
secure_test_framework/src/tests/simd/: util.rs
secure_test_framework/src/util/: timer.rs
src/: aarch64.rs  arm_macros.S  arm_macros_data.S  arm_macros_purge.S  asm_macros_common.S  asm_macros_common_purge.S  bl31_entrypoint.S  bl31_warm_entrypoint.S  cache_helpers.S  context.S  context.rs  cpu.rs  cpu_data.S  cpu_extensions.rs  cpu_helpers.S  crash_console.rs  crash_reporting.S  debug.S  debug.rs  dram.rs  errata_framework.rs  exceptions.rs  gic_debug_macros_data.S  gicv3.rs  gpt.rs  layout.rs  layout_fake.rs  lib.rs  logger.rs  main.rs  pagetable.rs  platform.rs  platform_helpers.S  reexports.rs  runtime_exceptions.S  semihosting.rs  services.rs  smccc.rs  stacks.rs  sysregs.rs  (+1 more)
src/cpu/: aem_generic.rs  c1_pro.rs  c1_ultra.rs  qemu_max.rs
src/cpu_extensions/: amu.rs  fgt.rs  fgt2.rs  hcx.rs  mpam.rs  mte2.rs  pauth.rs  pmuv3.rs  ras.rs  sctlr2.rs  simd.rs  spe.rs  sys_reg_trace.rs  tcr2.rs  trbe.rs  trf.rs
src/cpu_extensions/hcx/: hcx_sel2.rs
src/cpu_extensions/mpam/: mpam_sel2.rs
src/cpu_extensions/mte2/: mte2_sel1.rs  mte2_sel2.rs
src/cpu_extensions/ras/: ras_sel1.rs  ras_sel2.rs
src/cpu_extensions/sctlr2/: sctlr2_sel1.rs  sctlr2_sel2.rs
src/cpu_extensions/simd/: simd_sel1.rs
src/cpu_extensions/tcr2/: tcr2_sel1.rs  tcr2_sel2.rs
src/crash_console/: pl011.rs  pl011_console.S
src/errata_framework/: dsu.rs
src/gpt/: aarch64.rs  table.rs
src/logger/: inmemory.rs
src/pagetable/: early_pagetable.rs
src/platform/: fvp.rs  qemu.rs  test.rs
src/services/: arch.rs  errata_management.rs  ffa.rs  psci.rs  rmmd.rs  trng.rs
src/sysregs/: fake.rs
supply-chain/: audits.toml  config.toml
tools/: README.md  pre-push  size-history
(+20 files in other folders)
