[workspace]
resolver = "3"
members = ["secure_test_framework"]

[package]
name = "rf-a-bl31"
version = "0.1.0"
edition = "2024"
authors = [
  "Andrew Walbran <qwandor@google.com>",
  "Okash Khawaja <okash@google.com>",
]
rust-version = "1.88"

[profile.dev]
opt-level = "s"
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "thin"
strip = true
overflow-checks = true

[dependencies]
aarch64-paging = { version = "0.10.0", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
arm-psci = "0.1.1"
bitflags = "2.9.1"
log = "0.4.27"
percore = "0.1.0"
arm-pl011-uart = { version = "0.3", default-features = false }
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "spin_mutex",
] }
arm-ffa = { version = "0.3.0", default-features = false }
arm-gic = "0.5.0"

[dev-dependencies]
arm-gic = { version = "0.5.0", features = ["fakes"] }

[build-dependencies]
cc = "=1.2.16"

[features]
default = ["sel2"]
rme = []
sel2 = []
max_log_error = ["log/max_level_error"]
max_log_warn = ["log/max_level_warn"]
max_log_info = ["log/max_level_info"]
max_log_debug = ["log/max_level_debug"]

[lints.clippy]
unreadable_literal = "deny"
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
