# Copyright The Rusted Firmware-A Contributors.
#
# SPDX-License-Identifier: BSD-3-Clause

[workspace]
resolver = "3"
members = ["secure_test_framework"]

[package]
name = "rf-a-bl31"
version = "0.1.0"
edition = "2024"
authors = [
  "Andrew Walbran <qwandor@google.com>",
  "Okash Khawaja <okash@google.com>",
]
rust-version = "1.88"
license = "BSD-3-Clause"

[profile.dev]
opt-level = "s"
panic = "abort"

[profile.release]
debug = true
panic = "abort"
opt-level = "s"
lto = "fat"
strip = true
overflow-checks = true
codegen-units = 1

[dependencies]
aarch64-paging = { version = "0.11.0", default-features = false }
arm-ffa = { version = "0.4.1", default-features = false }
arm-fvp-base-pac = { version = "0.1.4", default-features = false }
arm-gic = "0.7.1"
arm-pl011-uart = { version = "0.4.0", default-features = false }
arm-pl061 = { version = "0.1.1", default-features = false }
arm-psci = "0.2.0"
arm-sysregs = { version = "0.2.1", features = ["el3"] }
arrayvec = { version = "0.7.6", default-features = false }
bitflags = "2.10.0"
log = "0.4.29"
num_enum = { version = "0.7.4", default-features = false }
paste = "1.0.14"
percore = { version = "0.2.1", default-features = false, features = [
  "zerocopy",
] }
spin = { version = "0.10.0", default-features = false, features = [
  "lazy",
  "once",
  "spin_mutex",
] }
uuid = { version = "1.19.0", default-features = false }
zerocopy = { version = "0.8.27", features = ["derive"] }

[dev-dependencies]
arm-gic = { version = "0.7.1", features = ["fakes"] }
arm-sysregs = { version = "0.2.1", features = ["fakes"] }

[features]
default = ["sel2"]
pauth = []
rme = []
sel2 = []
max_log_error = ["log/max_level_error"]
max_log_warn = ["log/max_level_warn"]
max_log_info = ["log/max_level_info"]
max_log_debug = ["log/max_level_debug"]

[lints.clippy]
unreadable_literal = "deny"
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
