[package]
name = "rf-a-bl31"
version = "0.1.0"
edition = "2021"
authors = [
  "Andrew Walbran <qwandor@google.com>",
  "Okash Khawaja <okash@google.com>",
]
rust-version = "1.82"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "thin"
strip = true

[dependencies]
aarch64-paging = { version = "0.8.0", features = [], default-features = false }
bitflags = "2.3.2"
log = "0.4.19"
percore = "0.1.0"
pl011-uart = "0.1.0"
spin = { version = "0.9.8", default-features = false, features = [
  "once",
  "spin_mutex",
] }
arm-ffa = { version = "0.1.0", default-features = false }

[build-dependencies]
cc = "1.0.79"
anyhow = "1.0.93"

[features]
default = ["sel2"]
rme = []
sel2 = []

[lints.clippy]
unreadable_literal = "deny"

[lints.rust]
missing_docs = "deny"
