[package]
name = "rf-a-bl31"
version = "0.1.0"
edition = "2021"
authors = [
  "Andrew Walbran <qwandor@google.com>",
  "Okash Khawaja <okash@google.com>",
]
rust-version = "1.82"

[profile.dev]
opt-level = "s"
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "thin"
strip = true
overflow-checks = true

[dependencies]
aarch64-paging = { version = "0.9.1", features = [], default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
arm-psci = "0.1.1"
bitflags = "2.9.1"
log = "0.4.27"
percore = "0.1.0"
arm-pl011-uart = { version = "0.3", default-features = false }
spin = { version = "0.10.0", default-features = false, features = [
  "once",
  "spin_mutex",
] }
arm-ffa = { version = "0.2.1", default-features = false }
arm-gic = "0.4.0"

[dev-dependencies]
arm-gic = { version = "0.4.0", features = ["fakes"] }

[build-dependencies]
cc = "=1.2.16"

[features]
default = ["sel2"]
rme = []
sel2 = []

[lints.clippy]
unreadable_literal = "deny"
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
