# Copyright The Rusted Firmware-A Contributors.
#
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "rf-a-secure-test-framework"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Walbran <qwandor@google.com>"]
rust-version = "1.88"
license = "BSD-3-Clause"

[dependencies]
aarch64-rt = { version = "0.4.2", default-features = false, features = [
  "exceptions",
  "initial-pagetable",
] }
aarch64-paging = { version = "0.11.0", default-features = false }
arm-ffa = "0.4.1"
arm-psci = "0.2.0"
arm-gic = "0.7.1"
arm-pl011-uart = { version = "0.3.1", default-features = false }
arm-sysregs = { version = "0.1.0", path = "../arm-sysregs" }
bitflags = "2.9.4"
buddy_system_allocator = { version = "0.11.0", default-features = false, features = [
  "alloc",
  "use_spin",
] }
linkme = "0.3.33"
log = "0.4.19"
paste = "1.0.15"
percore = { version = "0.2.1", default-features = false, features = [
  "zerocopy",
] }
spin = { version = "0.10.0", default-features = false, features = [
  "lazy",
  "once",
  "spin_mutex",
] }
smccc = "0.2.2"
thiserror = { version = "2.0.17", default-features = false }

[features]
pauth = []

[[bin]]
name = "bl32"
path = "src/bl32.rs"

[[bin]]
name = "bl33"
path = "src/bl33.rs"

[lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
unreadable_literal = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
